""" Builds resource_retriever.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "resource_retriever",
    srcs = glob(["resource_retriever/src/**/*.cpp"]),
    hdrs = glob(["resource_retriever/include/**/*.hpp"]),
    includes = ["resource_retriever/include"],
    visibility = ["//visibility:public"],
    deps = [
        "@curl",
        "@ros2_ament_index//:ament_index_cpp",
    ],
)
