""" Builds xacro.
"""

load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_ros2_pip_deps//:requirements.bzl", "requirement")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

py_library(
    name = "xacro_lib",
    srcs = glob(["xacro/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "@ros2_ament_index//:ament_index_python",
        requirement("pyyaml"),
    ],
)

write_file(
    name = "write_xacro_main",
    out = "xacro_main.py",
    # This is the same as scripts/xacro from upstream, except that we lose the
    # unused shebang line and we use a filename that is not subject to import
    # path conflicts.
    content = ["import xacro; xacro.main()"],
)

py_binary(
    name = "xacro_ros2_bin",
    srcs = [":write_xacro_main"],
    main = "xacro_main.py",
    deps = [":xacro_lib"],
    data = [":write_xacro_main"],
    tags = ["ros2_bin"],
    visibility = ["//visibility:public"],
)